--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 body::before {
     content: "";
-    position: fixed;
+    position: cover;
     top: 0;
     left: 0;
     width: 100%;
@@ -32,5 +32,5 @@ body::before {
 }
 
 .imagetitre {
-    position: absolute;
+    position: fixed;
 }
